--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "script-src 'self' https://telegram.org 'unsafe-eval'; object-src 'none';"
+            "value": "script-src 'self' 'unsafe-eval' https://telegram.org; object-src 'none';"
           }
         ]
       }
