替换内联脚本，修复 CSP 报错

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-    "routes": [
-      {
-        "src": "/(.*)",
-        "headers": {
-          "Content-Security-Policy": "script-src 'self' 'unsafe-eval' https://telegram.org; object-src 'none';"
-        }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "headers": {
+        "Content-Security-Policy": "script-src 'self' 'unsafe-eval' 'unsafe-inline' https://telegram.org; object-src 'none';"
       }
-    ]
-  }
+    }
+  ]
+}
