--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
-  "routes": [
-    {
-      "src": "/(.*)",
-      "headers": {
-        "Content-Security-Policy": "script-src 'self' 'unsafe-eval' 'unsafe-inline' https://telegram.org; object-src 'none';"
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "Content-Security-Policy",
+            "value": "script-src 'self' 'unsafe-eval' 'unsafe-inline' https://telegram.org; object-src 'none';"
+          }
+        ]
       }
-    }
-  ]
-}
+    ]
+  }
+  
