--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,18 @@
 {
-    "headers": [
-      {
-        "source": "/(.*)",
-        "headers": [
-          {
-            "key": "Content-Security-Policy",
-            "value": "script-src 'self' 'unsafe-eval' 'unsafe-inline' https://telegram.org; object-src 'none';"
-          }
-        ]
-      }
-    ]
-  }
-  
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "script-src 'self' 'unsafe-eval' https://telegram.org; object-src 'none';"
+        }
+      ]
+    }
+  ],
+  "routes": [
+    { "src": "/shop.html", "dest": "/shop.html" },
+    { "src": "/index.html", "dest": "/index.html" },
+    { "src": "/", "dest": "/index.html" }
+  ]
+}
