FIX: 终极CSP解决方案

--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,16 @@
         {
           "key": "Content-Security-Policy",
           "value": "script-src 'self' 'unsafe-eval' https://telegram.org; object-src 'none';"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "no-store, max-age=0"
         }
       ]
     }
   ],
   "routes": [
-    { "src": "/shop.html", "dest": "/shop.html" },
-    { "src": "/index.html", "dest": "/index.html" },
-    { "src": "/", "dest": "/index.html" }
+    { "src": "/index.html", "headers": { "Cache-Control": "no-store" } },
+    { "src": "/shop.html", "dest": "/shop.html" }
   ]
 }
