--- a/vercel.json
+++ b/vercel.json
@@ -5,17 +5,24 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "script-src 'self' 'unsafe-eval' https://telegram.org; object-src 'none';"
+          "value": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app; object-src 'none'; frame-src 'none';"
         },
         {
           "key": "Cache-Control",
-          "value": "no-store, max-age=0"
+          "value": "no-store, no-cache, must-revalidate"
         }
       ]
     }
   ],
   "routes": [
-    { "src": "/index.html", "headers": { "Cache-Control": "no-store" } },
-    { "src": "/shop.html", "dest": "/shop.html" }
+    { 
+      "src": "/index.html",
+      "headers": {
+        "Cache-Control": "no-store",
+        "Content-Security-Policy": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app; object-src 'none'"
+      }
+    },
+    { "src": "/shop.html", "dest": "/shop.html" },
+    { "src": "/", "dest": "/index.html" }
   ]
 }
