--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,26 @@
 {
+  "version": 2,
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app; object-src 'none'; frame-src 'none';"
+          "value": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app 'wasm-unsafe-eval'; connect-src 'self'; object-src 'none'; base-uri 'self';"
         },
         {
           "key": "Cache-Control",
-          "value": "no-store, no-cache, must-revalidate"
+          "value": "no-store, no-cache, must-revalidate, max-age=0"
         }
       ]
     }
   ],
   "routes": [
-    { 
+    {
       "src": "/index.html",
       "headers": {
-        "Cache-Control": "no-store",
-        "Content-Security-Policy": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app; object-src 'none'"
+        "Content-Security-Policy": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app;"
       }
-    },
-    { "src": "/shop.html", "dest": "/shop.html" },
-    { "src": "/", "dest": "/index.html" }
+    }
   ]
 }
