--- a/vercel.json
+++ b/vercel.json
@@ -6,21 +6,13 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app 'wasm-unsafe-eval'; connect-src 'self'; object-src 'none'; base-uri 'self';"
+          "value": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app; object-src 'none'; base-uri 'self';"
         },
         {
           "key": "Cache-Control",
           "value": "no-store, no-cache, must-revalidate, max-age=0"
         }
       ]
-    }
-  ],
-  "routes": [
-    {
-      "src": "/index.html",
-      "headers": {
-        "Content-Security-Policy": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app;"
-      }
     }
   ]
 }
