--- a/back/vercel.json
+++ b/back/vercel.json
@@ -6,7 +6,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "script-src 'self' 'unsafe-eval' https://telegram.org; object-src 'none'; base-uri 'self';"
+          "value": "script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app; object-src 'none'; base-uri 'self';"
         },
         {
           "key": "Cache-Control",
